add grade annotations
